EDUPROV: 08-06-2021 update user interface

--- a/course/bvsc-ah-course.html
+++ b/course/bvsc-ah-course.html
@@ -70,9 +70,12 @@
 
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
+              class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
+              class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
+              class="fa fa-user"></i> Student Form</a>
         </div>
       </div>
 
@@ -96,7 +99,7 @@
   <!--Course Start-->
 
 
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
         <h2 class="text-center text-primary" id="tag-font">
@@ -123,26 +126,25 @@
       <div class="col-md-12">
         <p class="text-justify" id="paragraph-font">
           The Degree of <b>Bachelor of Veterinary Science and Animal Husbandry or B.V.Sc and A.H.</b> is an
-          <b>undergraduate
-            program</b> in the field of <b>Veterinary Science.</b> The programs give all essential knowledge about
-          <b>Animal Husbandry
-            to perform therapeutic, Medical and Diagnostic principles on different types of animals.</b> This course
-          teaches
-          students to diagnose diseases in animals & birds, prescribe medicines and other surgical solutions, etc.
+          undergraduate program in the field of Veterinary Science. The programs give all essential knowledge about
+          Animal Husbandry to perform therapeutic, Medical and Diagnostic principles on different types of animals. This
+          course
+          teaches students to diagnose diseases in animals & birds, prescribe medicines and other surgical solutions,
+          etc.
           This course provides training to students for the medical treatment of animals and birds suffering from
           diseases.
         </p>
         <p class="text-justify" id="paragraph-font">
-          This program covers many important subjects such as <b>Animal Anatomy, Physiology, Animal Diseases,
-            Veterinary Reproduction Techniques, Poultry Breeding and Management, Food Product Technology and Animal
-            Nutrition, etc.</b> It also provides <b>Clinical Practice, Lab Diagnostics, and Surgery Practical.</b>
+          This program covers many important subjects such as Animal Anatomy, Physiology, Animal Diseases,
+          Veterinary Reproduction Techniques, Poultry Breeding and Management, Food Product Technology and Animal
+          Nutrition, etc. It also provides Clinical Practice, Lab Diagnostics, and Surgery Practical.
         </p>
         <p class="text-justify" id="paragraph-font">
-          To complete the <b>course</b> a person has to study <b>4 to 5 years,</b> depending on the type of institution
-          they are
-          studying at. Throughout the course, a student will study <b>Veterinary Biochemistry, Veterinary Pharmacology,
-            and Toxicology, Veterinary Anatomy, and Histology with various other subjects.</b> The fee structure of the
-          course also depends on the type of institution one is seeking. Repudiated institutions will be asking for
+          To complete the course a person has to study 4 to 5 years, depending on the type of institution
+          they are studying at. Throughout the course, a student will study Veterinary Biochemistry, Veterinary
+          Pharmacology, and Toxicology, Veterinary Anatomy, and Histology with various other subjects. The fee structure
+          of the course also depends on the type of institution one is seeking. Repudiated institutions will be asking
+          for
           higher fees.
         </p>
 
@@ -152,28 +154,26 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white">
-            Eligibility Criteria
+        <h2 class="text-center text-primary" id="tag-font">
 
-          </button>
+          Eligibility
         </h2>
       </div>
 
       <div class="col-md-12">
         <ul>
-          <li><b>The minimum education qualification to get selected is to pass 10+2 with at least 50 percentages on the
-              mark sheet.</b></li>
-          <li><b>A candidate should study Physics, Biology, Chemistry, and English in 12th from ICSE or CBSE or
-              recognized government boards.</b></li>
+          <li>The minimum education qualification to get selected is to pass 10+2 with at least 50 percentages on the
+            mark sheet.</li>
+          <li>A candidate should study Physics, Biology, Chemistry, and English in 12th from ICSE or CBSE or recognized
+            government boards.</li>
         </ul>
-        <p class="text-justify"  id="paragraph-font">
-          <b>To get admission there is a need to pass the common entrance exam of All India Pre Veterinary Test
-            (AIPVT). Many of the colleges are subject to AIPVT and some private Institutions are having their own
-            entrance exam. There may be some chances that a student will go through a personal interview. Being a part
-            of this course a student will get a deeper knowledge of how to cure an animal illness and performing work
-            within a team. The main agenda of the program is to increase the level of observation, and quickly coming
-            into a solution.</b>
+        <p class="text-justify" id="paragraph-font">
+          To get admission there is a need to pass the common entrance exam of All India Pre Veterinary Test
+          (AIPVT). Many of the colleges are subject to AIPVT and some private Institutions are having their own
+          entrance exam. There may be some chances that a student will go through a personal interview. Being a part
+          of this course a student will get a deeper knowledge of how to cure an animal illness and performing work
+          within a team. The main agenda of the program is to increase the level of observation, and quickly coming
+          into a solution.
         </p>
 
         <hr />
@@ -183,52 +183,37 @@
     </div>
 
     <div class="col-md-12">
-      <h2 class="text-center">
-        <button class="btn btn-large  btn-primary text-white">
-          BUMS Career Opportunities
+      <h2 class="text-center text-primary" id="tag-font">
 
-        </button>
+        Scope
       </h2>
     </div>
 
 
     <div class="col-md-12">
-      <p class="text-justify"  id="paragraph-font">
+      <p class="text-justify" id="paragraph-font">
         The working area is always related to animals and making a better world for them. A <b>B.V.Sc and A.H degree</b>
-        holder is able to work with <b>Breeding Farms, Dairy Farms, Drug Research Institutions, Insurance Companies,
-          National Parks, Police Forces, Veterinary Hospitals, Wildlife Centers and many other places.</b> There are
+        holder is able to work with Breeding Farms, Dairy Farms, Drug Research Institutions, Insurance Companies,
+        National Parks, Police Forces, Veterinary Hospitals, Wildlife Centers and many other places. There are
         government sectors also where they can easily get jobs. Teaching is another scope that will make a person
-        to be stable in life and also increase the knowledge. Also, a person can open their <b>own clinic after attains
-          years of experience.</b> 
+        to be stable in life and also increase the knowledge. Also, a person can open their own clinic after attains
+        years of experience.
 
       </p>
-      <p class="text-justify"  id="paragraph-font">
-        They can also start their own clinic and start their practice. Some <b>NGOs are
-          working for
-          Animal Welfare so they can also hire Veterinary Science graduates.</b> Food processing industries also recruit
-        Veterinary Science students to take care of <b>Quality control, Livestock management activities and Livestock
-          health care.</b>
+      <p class="text-justify" id="paragraph-font">
+        They can also start their own clinic and start their practice. Some NGOs are working for
+        Animal Welfare so they can also hire Veterinary Science graduates. Food processing industries also recruit
+        Veterinary Science students to take care of Quality control, Livestock management activities and Livestock
+        health care.
 
       </p>
-      <hr />
+
     </div>
 
-    <!--Table End-->
-
-
   </div>
 
-
-  <!--container end-->
   </div>
-
-
-
-  <!--Table End-->
-
-  <!--Course End-->
-
-  <!--Footer Start-->
+  <hr />
 
   <div class="container-fluid justify-content-center px-0">
     <footer>
@@ -238,19 +223,26 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
               <span>
-                <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
+                    class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
               <span>
-                <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
               </span>
               <span>
-                <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url"
+                  class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
               </span>
             </li>
           </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+              No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -328,22 +320,28 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html"
+              style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html"
+              style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
