Eduprov: 08-06-2021 : update user interface and add push notification

--- a/course/diploma-sanitary-inspector-course.html
+++ b/course/diploma-sanitary-inspector-course.html
@@ -91,11 +91,11 @@
     <div class="row">
         <div class="col-md-12">
           <p class="text-justify" id="paragraph-font">
-            The <b>Diploma Sanitary inspector course</b> is also known as <b>S.I course.</b> The main objective of this 
+            The <b>Diploma Sanitary inspector course</b> is also known as S.I course. The main objective of this 
             course is to obtain technicalities that supplemented by both practical and theoretic knowledge 
-            for students who aspire to join the health and sanitation department of <b>district councils, 
+            for students who aspire to join the health and sanitation department of district councils, 
                 municipal bodies, five-star hotels, railways, government organizations, schools, food and drug 
-                administrations, airports etc.</b> Completion of this course will give the students a job where they 
+                administrations, airports etc. Completion of this course will give the students a job where they 
             get to apply the knowledge to deal with health and sanitation issues. This also includes family 
             welfare, preventive health care and environmental conditions. The Sanitary inspector’s diploma 
             course is for one year long and the admissions take place twice a year, once in the month of June 
@@ -103,20 +103,13 @@
             </p> 
              <label><b>Students of this course get to learn the following –:</b></label>
              <ul>   
-             <li><b>Basic Human sciences
-                </b></li>
-                <li><b>Communicative English
-                </b></li>
-                <li><b>Computer application
-                </b></li>
-                <li><b>Elementary physics, Chemistry and Mathematics (that are applied to public health)
-                </b></li>
-                <li><b>First aid
-                </b></li>
-                <li><b>First aid
-                </b></li>
-                <li><b>Elementary entomology
-                </b></li>
+             <li><b>Basic Human sciences</b></li>
+                <li><b>Communicative English</b></li>
+                <li><b>Computer application</b></li>
+                <li><b>Elementary physics, Chemistry and Mathematics (that are applied to public health)</b></li>
+                <li><b>First aid</b></li>
+                <li><b>First aid</b></li>
+                <li><b>Elementary entomology </b></li>
                 <li><b>Elements of Social sciences, Behavioural Science
                 </b></li>
                 <li><b>Personal Hygiene
@@ -195,21 +188,17 @@
     <div class="row">
         <div class="col-md-12">
             <h2 class="text-center">
-                <button class="btn btn-large  btn-primary text-white" >
-                    Eligibility Criteria
-                </button>
+                    Eligibility
             </h2>
         </div>
 
 
         <div class="col-md-12">
           <ul>
-            <li><b>Students must have finished their 12th standard exam from any stream.,
-           </b></li>
-            <li><b>Students must have finished a two-year technical course after passing their tenth standard.,
-            </b></li>
-            <li><b>Students must have completed a diploma in engineering.,</b></li>
-            <li><b>Students must have finished an MPHW course from any state government.</b></li>
+            <li>Students must have finished their 12th standard exam from any stream.,</li>
+            <li>Students must have finished a two-year technical course after passing their tenth standard.,</li>
+            <li>Students must have completed a diploma in engineering.,</li>
+            <li>Students must have finished an MPHW course from any state government.</li>
 
           </ul>
             <hr />
@@ -219,24 +208,17 @@
     <div class="row">
         <div class="col-md-12">
             <h2 class="text-center">
-                <button class="btn btn-large  btn-primary text-white" >
                     Entrance examination
-
-                </button>
             </h2>
         </div>
 
 
         <div class="col-md-12">
                 <ul>
-                    <li><b>All India Institute of Local – Self Government, Ahmedabad, Gujarat
-                    </b></li>
-                    <li><b>All India Institute of Local – Self Government, Aurangabad, Maharashtra
-                    </b></li>
-                    <li><b>All India Institute of Local – Self Government, Bangalore, Karnataka
-                    </b></li>
-                    <li><b>All India Institute of Local – Self Government, Belgaum, Karnataka
-                    </b></li>
+                    <li>All India Institute of Local – Self Government, Ahmedabad, Gujarat</li>
+                    <li>All India Institute of Local – Self Government, Aurangabad, Maharashtra</li>
+                    <li>All India Institute of Local – Self Government, Bangalore, Karnataka</li>
+                    <li>All India Institute of Local – Self Government, Belgaum, Karnataka</li>
                 </ul>
             <hr />
         </div>
@@ -245,21 +227,19 @@
 
         <div class="col-md-12">
             <h2 class="text-center">
-                <button class="btn btn-large  btn-primary text-white" >
                  Scope
-                </button>
             </h2>
         </div>
         <div class="col-md-12">
        
            <ul>
-            <li><b>Medical Assistants</b></li>
-           <li><b>Laboratory Assistants</b></li>
-           <li><b>Health Worker</b></li>
-           <li><b>Field Assistant</b></li>
-           <li><b>Health Inspector</b></li>
-           <li><b>Food Inspector</b></li> 
-           <li><b>Sanitation Inspector</b></li> 
+            <li>Medical Assistants</li>
+           <li>Laboratory Assistants</li>
+           <li>Health Worker</li>
+           <li>Field Assistant</li>
+           <li>Health Inspector</li>
+           <li>Food Inspector</li> 
+           <li>Sanitation Inspector</li> 
         </ul>
          
         </div>
@@ -290,7 +270,7 @@
             <ul class="list-unstyled mt-md-3 mt-5">
               <label style="font-weight: bold">Address</label>
               <p>
-                Address: No 20 2nd Floor<br />
+                 No 20 2nd Floor<br />
                 Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
                 560001
               </p>
