--- a/course/doctor-of-medicine-course.html
+++ b/course/doctor-of-medicine-course.html
@@ -9,25 +9,25 @@
     content="Doctor of Medicine | M.D student get complete knowledge & skills in field of chosen specialization. For admission, eligibility, colleges, career visit EDUPROV">
   <meta name="keywords"
     content="	doctor of medicine admission, doctor of medicine course, doctor of medicine degree, doctor of medicine md, md doctor of medicine, mbbs vs md, md vs mbbs, md in medicine, mbbs to md, md in medical, degree for doctor, degrees for doctors, degree for doctors, doctor degree, doctors salaries, doctor courses, medical doctor, medicine doctor, doctor in medicine, doctorate in medicine, doctorate of medicine, doctor medicine, general physician, mbbs doctor admission, how to be a physician , general physician , MD Admission, M.D., M.D. Course, M.D Admission in Bangalore, M.D Courses in bangalore, Admission For M.D., M.D. Full Form, Career for M.D, After MBBS, abroad admission consultants, abroad education consultants, academic career coach, academic consultant in bangalore, admission, admission assistance , admission consultancy in bangalore, admission consultant, admission consultant in bangalore, admission consultant near me, admission guidance, admission guidance in bangalore, admission through management quota, admission through nri quota, bangalore university, best admission consultant in bangalore, best career guidance, best college admission consultant in bangalore, best colleges in bangalore, best education consultancy in bangalore, career counselling , career guidance, college, college admission, college admission assistance, college admission consultant in bangalore, college admission counselore near me, college admission guidance, college admission in bangalore, college admission information, college admission process, college admissions advice, college admissions consultant, college admissions counselor, college advisor, college consultant, college counselor, college planning consultant, colleges in bangalore, direct admission, direct admission consultants, education, education admission guidance, education counsellor, educational consultants in bangalore, educational guidance, foreign studies consultants, genuine admission consultant, international admissions, international education consultancy, international student admission, international university admission, mba admission assistance, nursing admission, overseas education consultant, overseas education consultants, overseas education consultants near me, para-medical colleges in bangalore, puc admission, school admission, school admission assistance, student consultants, study abroad consultant, study abroad consultants in bangalore, university admission">
-    <meta name="author" content="thephotogenicbug">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
-    <link rel="apple-touch-icon" href="/images/favicon.png">
-    <link rel="stylesheet" href="../blog.css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+  <meta name="author" content="thephotogenicbug">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="/images/favicon.png" alt="Edurpov Logo" />
+  <link rel="apple-touch-icon" href="/images/favicon.png">
+  <link rel="stylesheet" href="../blog.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
 
 </head>
 
 <body>
   <div class="bootstrap-nav">
-      
+
     <nav class="navbar navbar-expand-md  navbar-light bg-dark">
-      <a href="#" class="navbar-brand"> 
-        <div id="logo" >
+      <a href="#" class="navbar-brand">
+        <div id="logo">
           <img src="images/logo-white.png" alt="Edu-logo" />
         </div>
       </a>
@@ -38,13 +38,16 @@
 
       <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
         <div class="navbar-nav ml-auto ">
-          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i class="fa fa-home"></i> Home</a>
-            <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i class="fa fa-phone-square"></i> Contact</a>
-            <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i class="fa fa-user"></i> Student Form</a>
+          <a href="https://eduprov.com/index.html" class="nav-item text-white nav-link active"><i
+              class="fa fa-home"></i> Home</a>
+          <a href="https://eduprov.com/blogs/contact-form.html" class="nav-item text-white nav-link"><i
+              class="fa fa-phone-square"></i> Contact</a>
+          <a href="https://eduprov.com/blogs/student-application-form.html" class="nav-item text-white nav-link"><i
+              class="fa fa-user"></i> Student Form</a>
         </div>
-   
+
       </div>
-    
+
     </nav>
   </div>
   <!--Nav Bar End-->
@@ -53,11 +56,11 @@
   height: 350px;
   background-position: center center;
   background-size: cover;">
- 
+
     <div class="container text-white">
       <div class="row">
         <div class="col-md-8 mt-5 pt-5">
-         <h1>Doctor of Medicine</h1>
+          <h1>Doctor of Medicine</h1>
         </div>
       </div>
     </div>
@@ -87,33 +90,31 @@
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
-        <p class="text-justify">
-          <p>
-            <b>Doctor of Medicine or M.D.</b> is a postgraduate program in the field of <b>Medicines</b>. The
-            <b>course</b> signifies in gaining
-            complete knowledge and skills in the field of chosen <b>specialization.</b> The program of <b>M.D.</b> is
-            for 3 years in which a
-            candidate gets to learn through practical classes and theory sessions.
-            For successful completion of the course, a person should be calm, sharp-minded, and have <b>leadership
-              qualities. </b>
-            The course itself is hard and the popularity of the course is gaining more fame every day. There are many
-            medical institutions
-            in India from which a candidate can pursue this course. You may have some idea about the colleges that are
-            providing a postgraduate
-            program in the field of Medicines.
-          </p>
+        <p class="text-justify" id="paragraph-font">
 
-          <hr />
+          <b>Doctor of Medicine or M.D.</b> is a postgraduate program in the field of Medicines. The
+          course signifies in gaining
+          complete knowledge and skills in the field of chosen specialization. The program of M.D. is
+          for 3 years in which a
+          candidate gets to learn through practical classes and theory sessions.
+          For successful completion of the course, a person should be calm, sharp-minded, and haveleadership
+          qualities.
+          The course itself is hard and the popularity of the course is gaining more fame every day. There are many
+          medical institutions
+          in India from which a candidate can pursue this course. You may have some idea about the colleges that are
+          providing a postgraduate
+          program in the field of Medicines.
+        </p>
+
+        <hr />
       </div>
     </div>
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            Admission Process and Eligibility Criteria for M.D.
+        <h2 class="text-center text-primary" id="tag-font">
 
-          </button>
+          Eligibility
         </h2>
       </div>
 
@@ -121,21 +122,21 @@
 
 
         <ul>
-          <li><b>There are no age limits as far when a candidate can apply for this course. </b></li>
-          <li><b>To apply the minimum qualification is to have an M.B.B.S. degree. The degree should be attained from a
-              recognized University/Institution. </b></li>
-          <li><b>The passing percentage in the M.B.B.S. degree depends on the type of institution/college a person is
-              applying for. </b></li>
-          <li><b>The students have to submit their NEET scores and ranks along with their KCET or state CET entrance
-              exam application so that they can apply for the medical colleges in the state quota.</b></li>
-          <li><b>Mainly the institutions are having their own exams and personal interviews to provide a seat to the
-              candidate. The course itself is non-surgical that consists of Medicine, Pathology, Radiology, and a few
-              others. A common entrance exam is another way of being selected in Major Institutions</b></li>
-          <li><b>For Basic M.D. course a person should have M.B.B.S. degree in Physiology, Pathology, Biochemistry,
-              Pharmacology, Microbiology, and Anatomy.</b></li>
-          <li><b>For Clinical M.D. Discipline the required M.B.B.S. degrees are Community Medicine, General Medicine,
-              Psychiatry, Radiotherapy, Anesthesiology, Dermatology-Leprosy-Venerology, Paediatrics, Radio-Diagnosis,
-              and Pulmonary Medicine.</b></li>
+          <li>There are no age limits as far when a candidate can apply for this course. </b></li>
+          <li>The passing percentage in the M.B.B.S. degree depends on the type of institution/college a person is
+            applying for.</li>
+          <li>To apply the minimum qualification is to have an M.B.B.S. degree. The degree should be attained from a
+            recognized University/Institution. </li>
+          <li>The students have to submit their NEET scores and ranks along with their KCET or state CET entrance exam
+            application so that they can apply for the medical colleges in the state quota.</li>
+          <li>Mainly the institutions are having their own exams and personal interviews to provide a seat to the
+            candidate. The course itself is non-surgical that consists of Medicine, Pathology, Radiology, and a few
+            others. A common entrance exam is another way of being selected in Major Institutions</li>
+          <li>For Basic M.D. course a person should have M.B.B.S. degree in Physiology, Pathology, Biochemistry,
+            Pharmacology, Microbiology, and Anatomy.</li>
+          <li>For Clinical M.D. Discipline the required M.B.B.S. degrees are Community Medicine, General Medicine,
+            Psychiatry, Radiotherapy, Anesthesiology, Dermatology-Leprosy-Venerology, Paediatrics, Radio-Diagnosis, and
+            Pulmonary Medicine.</li>
         </ul>
 
 
@@ -143,24 +144,19 @@
       </div>
 
 
-      <div class="col-md-2 mt-2"></div>
 
-      <hr />
-    </div>
+      <div class="col-md-12 mt-2">
+        <h2 class="text-center text-primary" id="tag-font">
 
-    <div class="col-md-12">
-      <h2 class="text-center">
-        <button class="btn btn-large  btn-primary text-white" >
           M.D. Specializations
-        </button>
-      </h2>
-    </div>
+        </h2>
+      </div>
 
 
 
 
-    <div class="col-md-12">
-      <p class="text-justify">
+      <div class="col-md-12">
+
 
         <ul>
           <li>Cardiology</li>
@@ -180,80 +176,45 @@
 
         </ul>
         <hr />
-    </div>
+      </div>
 
 
 
-    <div class="col-md-12">
-      <h2 class="text-center">
-        <button class="btn btn-large  btn-primary text-white" >
-          M.D. Career Opportunities
+      <div class="col-md-12">
+        <h3 class="text-center text-primary" id="tag-font">
 
-        </button>
-      </h2>
+          Scope
+        </h3>
 
-    </div>
+      </div>
 
 
-    <div class="col-md-12">
-      <p class="text-justify">
+      <div class="col-md-12 mt-2">
+
         <label>Alternatively, B.S.M.S degree can lead you to a good job in the medical field and health care
           fields</label>
 
         <ul>
-          <li><b>After completing the course a person can start teaching in a college to attain more knowledge and
-              experience</b> </li>
-          <li><b>Everything in this course comes from experience and to start an M.D. degree holder can start practice
-              in any repudiated hospital.</b></li>
-          <li><b>The other way is to open their own personal clinic and work with the patients. Hospitals and
-              pharmaceutical areas are having more scope for fresher’s as they are providing experience and good
-              salaries.</b></li>
-          <li><b>There are two ways to work abroad: One to either study MD in other countries and get an easy placement
-              there. </b></li>
-          <li><b>The second way is to gain popularity, experience and apply in particular abroad areas.</b></li>
-
-
+          <li>After completing the course a person can start teaching in a college to attain more knowledge and
+            experience </li>
+          <li>Everything in this course comes from experience and to start an M.D. degree holder can start practice in
+            any repudiated hospital.</li>
+          <li>The other way is to open their own personal clinic and work with the patients. Hospitals and
+            pharmaceutical areas are having more scope for fresher’s as they are providing experience and goodsalaries.
+          </li>
+          <li>There are two ways to work abroad: One to either study MD in other countries and get an easy placement
+            there.</li>
+          <li>The second way is to gain popularity, experience and apply in particular abroad areas.</li>
         </ul>
 
-      </p>
+      </div>
+
     </div>
-
-
-
-    <!--Table End-->
-
-    <div class="col-md-12">
-      <h2 class="text-center">
-        <button class="btn btn-large  btn-primary text-white" >
-          Conclusion
-        </button>
-      </h2>
-    </div>
-
-
-
-    <p class="line-1 anim-typewriter">“The Need for a Good M.D. is always in demand Everywhere"</p>
-
-
-
-
-  </div>
-
-
-
-
-
   </div>
   <!--container end-->
   </div>
+  <hr />
 
-
-
-  <!--Table End-->
-
-  <!--Course End-->
-
-  <!--Footer Start-->
 
   <div class="container-fluid justify-content-center px-0">
     <footer>
@@ -262,20 +223,27 @@
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
-                <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
-                <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
-                </span>
-                <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
-                </span>
+              <span>
+                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
+                    class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url"
+                  class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
             </li>
-        </ul>
+          </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+              No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -353,22 +321,28 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html"
+              style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html"
+              style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
