--- a/course/llb-course.html
+++ b/course/llb-course.html
@@ -86,7 +86,7 @@
   </div>
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
         <h2 class="text-center text-primary" id="tag-font">
@@ -117,7 +117,7 @@
           (Bar Council of India) is the main regulatory body of Law education.
         </p>
 
-        <p class="text-justify">
+        <p class="text-justify" id="paragraph-font">
           A law student can go up to be a public prosecutor, solicitor general or a part of private legal firms after
           gaining experience.
           The law students can appear the exam conducted by the Public Service Commissions and get the position of
@@ -132,7 +132,7 @@
           self-confidence, awareness of rights and rules, better communication skills, high adaptability and
           versatility among the chances and opportunities to bring justice.
         </p>
-        <p class="text-justify">
+        <p class="text-justify" id="paragraph-font">
           Law is a career-oriented course that students can take up after 12th. In India, students
           can take up legal studies for 3 years with an LLB degree after graduation in any discipline.
           So, many premier institutes offer B.A.LLB, B.Sc.LLB, BBA LLB and B.Com LLB courses for students.
@@ -145,14 +145,13 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            Common Law Admission Test(CLAT)
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+          
+            Common Law Admission Test
         </h2>
       </div>
 
-      <div class="col-md-12">
+      <div class="col-md-12 mt-2">
         <p class="text-justify" id="paragraph-font">
           CLAT or Common Law Admissions Test is the most important exam that law aspirants must take after
           12th grade to get into top law colleges in India. LSATs are the best way to apply for law courses
@@ -166,18 +165,13 @@
           Science, commerce or humanities. You can learn more about the pattern, application information and
           exam details from their main website (https://www.clat.ac.in/).
         </p>
-        <hr />
+       
       </div>
 
-      <!--Table start-->
-
-      <!--Table End-->
     </div>
   </div>
+  <hr />
 
-  <!--Course End-->
-
-  <!--Footer Start-->
 
   <div class="container-fluid justify-content-center px-0">
     <footer>
@@ -187,19 +181,28 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                    <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url"
+                        class="text-white"> <i class="fa fa-facebook m-2 fa-1x"
+                            aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                    <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                            class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                    <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                            class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+                </span>
+                <span>
+                    <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/"
+                        #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x"
+                            aria-hidden="true"></i></a>
                 </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -277,25 +280,31 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
-              <li>MBA</li>
+            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>MEDICAL</li>
+            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>ENGINEERING</li>
+            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>LAW</li>
+            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>DESIGNING</li>
+            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>ARTS</li>
+            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>ARTS</li>
             </a>
-          </ul>
+        </ul>
         </div>
       </div>
     </footer>
