--- a/course/master-of-designing-course.html
+++ b/course/master-of-designing-course.html
@@ -122,14 +122,13 @@
 
         <div class="row">
             <div class="col-md-12">
-                <h2 class="text-center">
-                    <button class="btn btn-large  btn-primary text-white" >
-                        ELIGIBILITY
-                    </button>
+                <h2 class="text-center text-primary" id="tag-font">
+                   
+                        Eligibility
                 </h2>
             </div>
 
-            <div class="col-md-12">
+            <div class="col-md-12 mt-2">
                 <p class="text-justify" id="paragraph-font">
 
                     Candidates from the general unreserved and general/ unreserved EWS category need to be under the age
@@ -139,8 +138,7 @@
 
                 <ul>
                     <li>Candidates in the final year or those who have completed the course can join</li>
-                    <li>There is a total of 10 percent seats in each discipline that is reserved for OCI and NRI
-                        students</li>
+                    <li>There is a total of 10 percent seats in each discipline that is reserved for OCI and NRI students</li>
                     <li>Candidates must have completed one of the following educational qualifications:</li>
                     <li>4-year bachelor’s degree in any specialization after class 12 or equivalent education</li>
                     <li>3-year bachelor’s degree in any specialization after class 12</li>
@@ -153,13 +151,12 @@
             </div>
 
             <div class="col-md-12">
-                <h2 class="text-center">
-                    <button class="btn btn-large  btn-primary text-white" >
+                <h2 class="text-center text-primary" id="tag-font">
+                  
                         Top Colleges
-                    </button>
                 </h2>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-2">
                 <ul>
                     <li>Master of Design in information design</li>
                     <li>Master of Design in interaction design</li>
@@ -189,17 +186,9 @@
 
                 </ul>
             </div>
-
-
-            <!--Table start-->
-
-            <!--Table End-->
         </div>
     </div>
-
-    <!--Course End-->
-
-    <!--Footer Start-->
+<hr/>
 
     <div class="container-fluid justify-content-center px-0">
         <footer>
@@ -209,19 +198,28 @@
                         <label style="font-weight: bold">Social Media</label>
                         <li class="social">
                             <span>
-                                <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url"
+                                    class="text-white"> <i class="fa fa-facebook m-2 fa-1x"
+                                        aria-hidden="true"></i></span></a>
                             <span>
-                                <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                                        class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                             </span>
                             <span>
-                                <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                                        class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+                            </span>
+                            <span>
+                                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/"
+                                    #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x"
+                                        aria-hidden="true"></i></a>
                             </span>
                         </li>
                     </ul>
                     <ul class="list-unstyled mt-md-3 mt-5">
                         <label style="font-weight: bold">Address</label>
                         <p>
-                            Address: No 20 2nd Floor<br />
+                            No 20 2nd Floor<br />
                             Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
                             560001
                         </p>
@@ -299,22 +297,28 @@
                 <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
                     <ul class="list-unstyled">
                         <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-                        <a href="" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html"
+                            style="text-decoration: none; color: white">
                             <li>MBA</li>
                         </a>
-                        <a href="" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html"
+                            style="text-decoration: none; color: white">
                             <li>MEDICAL</li>
                         </a>
-                        <a href="" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html"
+                            style="text-decoration: none; color: white">
                             <li>ENGINEERING</li>
                         </a>
-                        <a href="" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-law-course-information.html"
+                            style="text-decoration: none; color: white">
                             <li>LAW</li>
                         </a>
-                        <a href="" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html"
+                            style="text-decoration: none; color: white">
                             <li>DESIGNING</li>
                         </a>
-                        <a href="" style="text-decoration: none; color: white">
+                        <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html"
+                            style="text-decoration: none; color: white">
                             <li>ARTS</li>
                         </a>
                     </ul>
