--- a/course/mcom-course.html
+++ b/course/mcom-course.html
@@ -108,9 +108,9 @@
     <div class="row">
       <div class="col-md-12">
         <p class="text-justify" id="paragraph-font">
-          <strong> Master of Commerce</strong> commonly known as <strong>M. Com is a postgraduate program in Commerce,
+          <strong> Master of Commerce</strong> commonly known as M. Com is a postgraduate program in Commerce,
             finance,
-            economics and accounts</strong> related aspects. The duration of this master’s degree course is 2 years.
+            economics and accounts related aspects. The duration of this master’s degree course is 2 years.
           Upon satisfying the eligibility criteria one can know further about how to join in this course
           and what are the advantages of being an M. Com graduate.On successful completion of the coursework,
           the candidate will be honored with a postgraduate degree of M. Com. In this course, students learn the
@@ -119,7 +119,7 @@
           human resource, research and development, accounting, finance and many more.
         </p>
 
-        <p class="text-justify">
+        <p class="text-justify" id="paragraph-font">
           For this coursework, the candidates are required to choose one or two specializations as per their
           interest areas. You have options to choose from various business subjects. While following the
           coursework, you study about diverse topics and subjects such as Corporate Accounting, Business
@@ -133,10 +133,8 @@
 
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            ELIGIBILITY
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+            Eligibility
         </h2>
       </div>
 
@@ -152,10 +150,9 @@
       </div>
 
       <div class="col-md-12">
-        <h2 class="text-center">
-          <button class="btn btn-large  btn-primary text-white" >
-            SCOPE
-          </button>
+        <h2 class="text-center text-primary" id="tag-font">
+         
+            Scope
         </h2>
       </div>
 
@@ -183,18 +180,12 @@
           pay scale. Career after this M.Com coursework has extreme growth with decent income options.
         </p>
 
-        <hr />
+        
       </div>
 
-      <!--Table start-->
-
-      <!--Table End-->
     </div>
   </div>
-
-  <!--Course End-->
-
-  <!--Footer Start-->
+  <hr />
 
   <div class="container-fluid justify-content-center px-0">
     <footer>
@@ -204,19 +195,28 @@
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
                 <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
+                    <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url"
+                        class="text-white"> <i class="fa fa-facebook m-2 fa-1x"
+                            aria-hidden="true"></i></span></a>
                 <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
+                    <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                            class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
                 </span>
                 <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
+                    <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                            class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+                </span>
+                <span>
+                    <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/"
+                        #id="footer-url" class="text-white"> <i class="fa fa-linkedin m-2 fa-1x"
+                            aria-hidden="true"></i></a>
                 </span>
             </li>
         </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+              No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -294,25 +294,31 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
-              <li>MBA</li>
+            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>MEDICAL</li>
+            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>ENGINEERING</li>
+            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>LAW</li>
+            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>DESIGNING</li>
+            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
-              <li>ARTS</li>
+            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html"
+                style="text-decoration: none; color: white">
+                <li>ARTS</li>
             </a>
-          </ul>
+        </ul>
         </div>
       </div>
     </footer>
