--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-94021714-1"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js" integrity="sha512-CEiA+78TpP9KAIPzqBvxUv8hy41jyI3f2uHi7DGp/Y/Ka973qgSdybNegWFciqh6GrN2UePx2KkflnQUbUhNIA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js" integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -77,7 +79,7 @@
 
   <div class="bootstrap-nav">
 
-    <nav class="navbar navbar-expand-md  navbar-light bg-dark">
+    <nav class="navbar navbar-expand-md  navbar-light bg-danger">
       <a href="https://eduprov.com/" class="navbar-brand">
         <div id="logo">
           <img src="images/logo-white.png" alt="Edu-logo" title="Logo" />
@@ -104,7 +106,7 @@
 
     </nav>
   </div>
-  <div class="banner" style=" background-image: url('/images/banner.webp'); width: 100%;
+  <div class="banner" style=" background-image: url('/images/banner6.webp'); width: 100%;
     height: 600px;
     background-position: center center;
     padding: 65px;
@@ -120,7 +122,7 @@
           <p class="text-justify text-center text-white mt-2" style="font-weight: bold">
             ADMISSION GUIDANCE, CAREER COUNSELING, OVERSEAS EDUCATION
             <br />
-            <button class="btn btn-success mt-3"><a href="tel:+918025591146" id="telephone">CALL US</a></button>
+            <button class="btn btn-danger mt-3"><a href="tel:+918025591146" id="telephone">CALL US</a></button>
           </p>
         </div>
       </div>
@@ -278,7 +280,47 @@
     </div>
   </div>
 
-  <div class="container mt-5 ">
+
+  
+  <section class=" mt-4">
+    <div class="container">
+      <div class="row">
+      <div class="col-md-3">
+        <div class="card-counter primary">
+          <i class="fa fa-users"></i>
+          <span class="count-numbers">12</span>
+          <span class="count-name">Counseling</span>
+        </div>
+      </div>
+  
+      <div class="col-md-3">
+        <div class="card-counter danger">
+          <i class="fa fa-university"></i>
+          <span class="count-numbers">12</span>
+          <span class="count-name">Admissions</span>
+        </div>
+      </div>
+  
+      <div class="col-md-3">
+        <div class="card-counter success">
+          <i class="fa fa-user"></i>
+          <span class="count-numbers">12</span>
+          <span class="count-name">Happy Customers</span>
+        </div>
+      </div>
+  
+      <div class="col-md-3">
+        <div class="card-counter info">
+          <i class="fa fa-google"></i>
+          <span class="count-numbers">4.8</span>
+          <span class="count-name">Google Rating</span>
+        </div>
+      </div>
+    </div>
+  </div>
+   </section>
+
+  <!--<div class="container mt-5 ">
     <div class="row mt-2">
       <div class="col-md-12">
         <h4 class="text-center ">
@@ -303,7 +345,15 @@
 
 
     </div>
-  </div>
+    
+  </div> -->
+
+
+
+
+
+
+
   <hr/>
   <div class="testimonials-clean">
     <div class="container">
@@ -505,5 +555,9 @@
 
 </body>
 <script src="app.js"></script>
-
+<script>
+  $('.count-numbers').counterUp({
+    delay: 20,
+});
+</script>
 </html>
