--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@
     </nav>
   </div>
   <div class="banner" style=" background-image: url('/images/banner6.webp'); width: 100%;
-    height: 600px;
+    height: 750px;
     background-position: center center;
-    padding: 65px;
+    padding-top: 120px;
     background-size: cover;" alt="banner" title="bannerimage">
 
 
@@ -285,7 +285,7 @@
       <div class="col-md-3">
         <div class="card-counter primary">
           <i class="fa fa-users"></i>
-          <span class="count-numbers">12</span>
+          <span class="count-numbers">1,000</span>
           <span class="count-name">Counseling</span>
         </div>
       </div>
@@ -293,7 +293,7 @@
       <div class="col-md-3">
         <div class="card-counter danger">
           <i class="fa fa-university"></i>
-          <span class="count-numbers">12</span>
+          <span class="count-numbers">700</span>
           <span class="count-name">Admissions</span>
         </div>
       </div>
@@ -301,7 +301,7 @@
       <div class="col-md-3">
         <div class="card-counter success">
           <i class="fa fa-user"></i>
-          <span class="count-numbers">12</span>
+          <span class="count-numbers">1,000</span>
           <span class="count-name">Happy Customers</span>
         </div>
       </div>
