--- a/schools/josephs-indian-primary-school.html
+++ b/schools/josephs-indian-primary-school.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>St. Josephs Indian Primary School School Information,School structure & system | Eduprov</title>
+  <title>St. Josephs Indian Primary School Information | Eduprov</title>
   <meta name="description" content="R.T.Nagar Public School was one of the schools established Twenty Year ago. It has gained popularity over the years. The founder Late Mr. B. Ramaiah.
     ">
   <meta name="keywords"
@@ -86,10 +86,9 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
+        <h2 class="text-center  text-primary" id="tag-font">
+          
             School Information
-          </button>
         </h2>
       </div>
     </div>
@@ -97,7 +96,7 @@
   <div class="container mt-3">
     <div class="row">
       <div class="col-md-12">
-          <label><b>St Joseph’s School (CBSE) lays a solid foundation for the students from Kindergarten up to Class 10.</b></label>
+          <label>St Joseph’s School (CBSE) lays a solid foundation for the students from Kindergarten up to Class 10.</label>
         <p class="text-justify" id="paragraph-font">
             St Joseph’s Indian Institutions managed by the Jesuit Fathers has a legacy of 115 years of undoubted and unprecedented service to society by educating the younger generation. It is firmly built on the motto “Faith and Toil”, aimed at making the young men and women grow and mold themselves to be selfless in building human communities.
 
@@ -123,10 +122,9 @@
     <div class="container">
         <div class="row">
           <div class="col-md-12">
-            <h2 class="text-center" id="tag-font">
-              <button class="btn btn-large  btn-primary text-white" >
-                School structure & system
-              </button>
+            <h2 class="text-center  text-primary" id="tag-font">
+            
+                School structure 
             </h2>
           </div>
         </div>
@@ -165,20 +163,27 @@
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
-                <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
-                <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
-                </span>
-                <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
-                </span>
+              <span>
+                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
+                    class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url"
+                  class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
             </li>
-        </ul>
+          </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+               No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -256,22 +261,28 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html"
+              style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html"
+              style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
