--- a/schools/sindhi-high-school.html
+++ b/schools/sindhi-high-school.html
@@ -82,13 +82,13 @@
 
   <!--Course Start-->
   </div>
-  <div class="container">
+  <div class="container mt-2">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="text-center" id="tag-font">
-          <button class="btn btn-large  btn-primary text-white" >
+        <h2 class="text-center  text-primary" id="tag-font">
+       
             School Information
-          </button>
+   
         </h2>
       </div>
     </div>
@@ -106,13 +106,12 @@
       </div>
     </div>
     <label><b>Affiliated to Central Board of Secondary Education, New Delhi</b></label>
-    <hr/>
 
-  <hr/>
+
   
  
   </div>
-
+  <hr/>
   <!--Course End-->
 
   <!--Footer Start-->
@@ -124,20 +123,27 @@
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Social Media</label>
             <li class="social">
-                <span>
-                    <i class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span>
-                <span>
-                    <i class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i>
-                </span>
-                <span>
-                    <i class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i>
-                </span>
+              <span>
+                <a href="https://www.facebook.com/eduprovinstitute/" #id="footer-url" class="text-white"> <i
+                    class="fa fa-facebook m-2 fa-1x" aria-hidden="true"></i></span></a>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-twitter m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://twitter.com/eduprov" #id="footer-url" class="text-white"> <i
+                    class="fa fa-instagram m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
+              <span>
+                <a href="https://www.linkedin.com/in/eduprov-educational-institute-ab2b24115/" #id="footer-url"
+                  class="text-white"> <i class="fa fa-linkedin m-2 fa-1x" aria-hidden="true"></i></a>
+              </span>
             </li>
-        </ul>
+          </ul>
           <ul class="list-unstyled mt-md-3 mt-5">
             <label style="font-weight: bold">Address</label>
             <p>
-              Address: No 20 2nd Floor<br />
+              No 20 2nd Floor<br />
               Lady Curzon Rd Santha Complex Shivaji Nagar Bengaluru Karnataka
               560001
             </p>
@@ -215,22 +221,28 @@
         <div class="col-xl-auto col-md-3 pt-4 my-sm-0 order-md-3 order-sm-1">
           <ul class="list-unstyled">
             <label class="mt-md-0 mt-4" style="font-weight: bold">Top Courses</label>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-mba-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MBA</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-medical-course-information.html"
+              style="text-decoration: none; color: white">
               <li>MEDICAL</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-engineering-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ENGINEERING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-law-course-information.html"
+              style="text-decoration: none; color: white">
               <li>LAW</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-designing-course-information.html"
+              style="text-decoration: none; color: white">
               <li>DESIGNING</li>
             </a>
-            <a href="" style="text-decoration: none; color: white">
+            <a href="https://eduprov.com/blogs/eduprov-arts-humanities-course-information.html"
+              style="text-decoration: none; color: white">
               <li>ARTS</li>
             </a>
           </ul>
